--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -6,10 +6,14 @@
   height: 100%;
   display: grid;
   grid-template-columns: var(--sidebar) var(--preview);
+  grid-template-rows: 1fr auto;
+  /* Row for content, Row for version */
 }
 
 /* Sidebar (left 70%) */
 .sidebar {
+  grid-row: 1 / -1;
+  /* Span full height */
   border-right: 1px solid var(--line);
   padding: 18px;
   display: grid;
@@ -25,6 +29,7 @@
 
 /* Preview (right 30%) */
 .preview {
+  grid-row: 1;
   padding: 24px;
   display: grid;
   grid-template-rows: 1fr auto;
@@ -32,8 +37,9 @@
 }
 
 .version-info {
+  grid-row: 2;
   grid-column: 2;
-  align-self: end;
+  align-self: center;
   justify-self: center;
   padding-bottom: 12px;
   text-align: center;
