mobile responce is updated with navigation button

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -10,6 +10,10 @@
   /* Row for content, Row for version */
 }
 
+.mobile-nav {
+  display: none;
+}
+
 /* Sidebar (left 70%) */
 .sidebar {
   grid-row: 1 / -1;
