--- a/assets/css/forms.css
+++ b/assets/css/forms.css
@@ -32,22 +32,25 @@ select {
 input[type="color"] {
   width: 48px;
   height: 48px;
-  padding: 0;
+  padding: 4px;
   cursor: pointer;
+  border-radius: 50%;
+  border: 2px solid var(--line);
 }
 
 input[type="color"]::-webkit-color-swatch-wrapper {
   padding: 0;
+  border-radius: 50%;
 }
 
 input[type="color"]::-webkit-color-swatch {
   border: none;
-  border-radius: 8px;
+  border-radius: 50%;
 }
 
 input[type="color"]::-moz-color-swatch {
   border: none;
-  border-radius: 8px;
+  border-radius: 50%;
 }
 
 input[type="range"] {
