--- a/assets/css/brand.css
+++ b/assets/css/brand.css
@@ -12,7 +12,7 @@
   width: 34px;
   height: 34px;
   border-radius: 10px;
-  background: url("/assets/quran.png") center/contain no-repeat;
+  background: url("../assets/quran.png") center/contain no-repeat;
 }
 
 .title {
